# ReverseEngineeredTwitterAPI

./: .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma/migrations/20230723114522_init/: migration.sql
prisma/migrations/20230723125308_alter_tweets_add_excuted/: migration.sql
prisma/migrations/20230723182426_init/: migration.sql
src/: auth.rs  lib.rs  main.rs  prisma.rs  relation.rs  search.rs  types.rs
src/abi/: collective.json  space.json
src/cmd/: core.rs  create_space.rs  mint_nft.rs  mod.rs
src/twitter/: api.rs  auth.rs  mod.rs  search.rs  types.rs
src/types_resp/: followers_types.rs  following_types.rs  mod.rs
src/util/: mod.rs
