[package]
name = "reverse-engineered-twitter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
ethers = "2.0"
eyre = "0.6.8"
log = "0.4.19"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.100"
tokio = { version = "1", features = ["full"] }
reverse-engineered-twitter-api = "0.1.2"
regex = "1.9.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["migrations", "mysql"]  }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = ["migrations", "mysql"]  }

